melhorias na sessão de certificados, novos certificados, alterações no readme

--- a/index.html
+++ b/index.html
@@ -233,58 +233,88 @@
                 <div class="card-group">
                     <div class="card">
                         <img src="imagens/Certificados/Pandas.jpg" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Data Analysis with Pandas</h4>
+                            <a class="credential" href="https://www.udemy.com/certificate/UC-a939b527-8820-47c1-9a6e-7d602eec4d75/" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
                             <p>Udemy</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/Scrum.jpg" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Gestão Ágil com Scrum</h4>
+                            <a class="credential" href="https://www.udemy.com/certificate/UC-a7cddf1a-0e9d-4b48-ac16-2a42f35d2f61/" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
                             <p>Udemy</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/Imersao_avacada_xperiun.png" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Imersão Avançada</h4>
                             <p>Xperiun</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/versionamento_git_github.png" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Versionamento de Código com Git e GitHub</h4>
+                            <a class="credential" href="https://www.dio.me/certificate/WR3HEL2G" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
                             <p>DIO</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/tecnicas_avancadas_python.png" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Técnicas Avançadas de Python</h4>
+                            <a class="credential" href="https://www.linkedin.com/learning/certificates/01f72bb1f7b37cc9b4fad138c633d827277707328c380721e0d55f9858b672ba?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BeSSH6vbxTTS0tEJ%2BZYIKJw%3D%3D" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                            <p>LinkedIn</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/fundamentos_de_analise_dados.png" alt="Card image cap">
+                        <div class="card-content">
+                            <h4>Fundamentos de Análise de Dados</h4>
+                            <a class="credential" href="https://www.linkedin.com/learning/certificates/1cae2a9a51b57a22b942511559f8c957f6c6fa4853adb80ad9bf4a7abbd78653?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BeSSH6vbxTTS0tEJ%2BZYIKJw%3D%3D" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
                             <p>LinkedIn</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/fundamentos_analise_dados.png" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Fundamentos para Análise de Dados por Microsoft e LinkedIn</h4>
+                            <a class="credential" href="https://www.linkedin.com/learning/certificates/1cae2a9a51b57a22b942511559f8c957f6c6fa4853adb80ad9bf4a7abbd78653?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BeSSH6vbxTTS0tEJ%2BZYIKJw%3D%3D" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
                             <p>LinkedIn | Microsoft</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/Power_BI_Crefaz.png" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Power BI - Report Designer</h4>
                             <p>Crefaz</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="imagens/Certificados/Python_basic_hackerhank.png" alt="Card image cap">
-                        <div>
+                        <div class="card-content">
                             <h4>Python (Basic)</h4>
+                            <a class="credential" href="https://www.hackerrank.com/certificates/5b29ae3e97c0" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
                             <p>HackerHank</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/BI_FIAP.png" alt="Card image cap">
+                        <div class="card-content">
+                            <h4>Business Intelligence (BI)</h4>
+                            <a class="credential" href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/83501/652d621c00b044eff6a0aae052a50435/certificado.png" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                            <p>FIAP</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="imagens/Certificados/Python_FIAP.png" alt="Card image cap">
+                        <div class="card-content">
+                            <h4>Python</h4>
+                            <a class="credential" href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/47247/bcbc7fe671c155ce2dee43f28d2dbea0/certificado.png" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                            <p>FIAP</p>
                         </div>
                     </div>
                 </div>
