Skills/Contato/Portifólio

--- a/index.html
+++ b/index.html
@@ -68,19 +68,114 @@
         </div>
 
         <div class="container">
-            <h2 id="skills">Skills</h2>
-            <ul>
-                <li>Python</li>
-                <li>Power BI</li>
-                <li>DAX</li>
-                <li>Flask</li>
-                <li>SQL</li>
-                <li>Git e GitHub</li>
-                <li>WebScraping</li>
-                <li>APIs</li>
-                <li>Pandas (Python)</li>
-                <li>Scrum</li>
-            </ul>
+          <h2 id="skills">Skills</h2>
+          <div class="container-skill">
+            <div class="skill-box">
+              <span class="skill-title">Power BI<span class="years-xp"> - 4 anos</span></span>
+
+              <div class="skill-bar">
+                <span class="skill-per power-bi">
+                  <span class="tooltip">95%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">Python<span class="years-xp"> - 3 anos</span></span>
+              <div class="skill-bar">
+                <span class="skill-per python">
+                  <span class="tooltip">70%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">Pandas</span>
+              <div class="skill-bar">
+                <span class="skill-per pandas">
+                  <span class="tooltip">95%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">DAX</span>
+              <div class="skill-bar">
+                <span class="skill-per dax">
+                  <span class="tooltip">90%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">WebScraping</span>
+              <div class="skill-bar">
+                <span class="skill-per webscraping">
+                  <span class="tooltip">80%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">Flask</span>
+              <div class="skill-bar">
+                <span class="skill-per flask">
+                  <span class="tooltip">65%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">SQL</span>
+              <div class="skill-bar">
+                <span class="skill-per sql">
+                  <span class="tooltip">40%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">Git e GitHub</span>
+              <div class="skill-bar">
+                <span class="skill-per git">
+                  <span class="tooltip">40%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">APIs</span>
+              <div class="skill-bar">
+                <span class="skill-per api">
+                  <span class="tooltip">65%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">Python GUIs</span>
+              <div class="skill-bar">
+                <span class="skill-per gui">
+                  <span class="tooltip">40%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">HTML</span>
+              <div class="skill-bar">
+                <span class="skill-per html">
+                  <span class="tooltip">40%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">CSS</span>
+              <div class="skill-bar">
+                <span class="skill-per css">
+                  <span class="tooltip">35%</span>
+                </span>
+              </div>
+            </div>
+            <div class="skill-box">
+              <span class="skill-title">Scrum</span>
+              <div class="skill-bar">
+                <span class="skill-per scrum">
+                  <span class="tooltip">50%</span>
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="container">
             <h2 id="experiencias">Experiências</h2>
@@ -170,6 +265,8 @@
                           Crefaz
                         </span>
                       </div>
+                      <div class="jobDescription">
+                    </div>
                     </li>
                     <li>
                       <div class="jobPosition">
@@ -188,14 +285,17 @@
                         </span>
                       </div>
                       <div class="jobDescription">
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum mollitia quasi inventore architecto maxime, suscipit officia dolor modi rem? Expedita excepturi ut quia ea. Impedit placeat velit consectetur neque unde!</p>
-                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque officiis distinctio earum omnis nesciunt, neque totam magnam ab animi reiciendis suscipit. Tempora natus aliquid eum quisquam accusantium consectetur vero!</p>
-                          <ul>
-                            <li>Skill</li>
-                            <li>SkillX</li>
-                            <li>Skilly</li>
-                          </ul>
-                          <p><strong>Skills: </strong>Aprendi X, Y, Z</p>
+                          <details>
+                            <summary>Detalhes</summary>
+                            <p>Durante a graduação em Administração, realizei um estágio na Receita Estadual, onde tive meu primeiro contato com o ambiente corporativo. Nessa experiência, desenvolvi habilidades essenciais, como:</p>
+                            <ul>
+                              <li><strong>Comunicação e Atendimento ao Público:</strong> atendi diretamente o público, auxiliando nos cadastros e explicando detalhadamente sobre o programa Nota Paraná. Essa interação constante aprimorou minhas capacidades de comunicação e resolução de problemas.</li>
+                              <li><strong>Gerenciamento de Dados:</strong> fui responsável pelo controle e manutenção da base de dados das entidades participantes do programa, o que me despertou o interesse pela área de dados e análise de informações.</li>
+                              <li><strong>Automação de Processos:</strong> percebi oportunidades de melhoria nos processos, onde comecei a aprender VBA. Desenvolvi códigos para automatizar a geração de ofícios em resposta às solicitações dos juízes. Esse projeto proporcionou meu primeiro contato com programação, abrindo caminho para grandes oportunidades de aprendizado nessa área.</li>
+                            </ul>
+                            <p><strong>Atividades:</strong> Receber, encaminhar, ordenar, protocolar e fotocopiar documentos administrativos-fiscais,digitar e emitir documentos via sistema, atender público interno e externo, atender telefone e auxiliar na manutenção do Portal Nota Paraná.</p>
+                            <p><strong>Skills: </strong>Excel, VBA, Word, Comunicação.</p>
+                          </details>
                       </div>
                     </li>
                   </ul>
@@ -227,6 +327,16 @@
         </div>
         <div class="container">
             <h2 id="portifolio">Portifólio</h2>
+            <div class="card-group">
+              <div class="card">
+                  <img src="imagens/Portifólio/desafio_xperiun.png" alt="Card image cap">
+                  <div class="card-content">
+                      <h4>Gráfico Dispersão com Cores e Eixos Dinâmicos</h4>
+                      <a class="credential" href="https://app.powerbi.com/view?r=eyJrIjoiYjc2MTg0MjgtOTA2OS00MzM0LThkODktM2JiNjNjZTI4NWM3IiwidCI6IjJjOThmOTYyLWRjMmUtNDVlYi1iMmQ0LTI4NzMyYmRlNGM2ZSJ9" target="_blank">Acessar Projeto <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                      <p>Power BI</p>
+                  </div>
+              </div>
+            </div>
         </div>
         <div class="container">
             <h2 id="certificados">Licenças e Certificados</h2>
@@ -321,15 +431,38 @@
         </div>
         <div class="container">
             <h2 id="contato">Contato</h2>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore atque sunt porro molestias dicta dolorum, sequi perspiciatis hic soluta quae temporibus voluptates odit impedit non ut. Necessitatibus, deleniti maxime?</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur deserunt at sunt veritatis quibusdam nostrum quasi illo dolorum eos fugiat aspernatur ullam animi beatae quos optio doloremque ipsum, perspiciatis iusto.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum beatae eos excepturi minus. Architecto harum aliquam vero nihil culpa, mollitia ab omnis, ea autem eligendi cumque fugiat, doloribus rem quia.</p>
-            </section>
+            <div class="infos contato-section">
+            <p>
+                <a href="https://wa.me/+5544991315400" target="_blank" rel="external">
+                <i class="fa fa-whatsapp" aria-hidden="true"></i> Whatsapp
+                </a>
+                <span>(44) 99131-5400</span>
+            </p>
+            <p>
+                <a href="mailto:felipequagliagambini@gmail.com" target="_blank" rel="external">
+                    <i class="fa fa-envelope" aria-hidden="true"></i> E-mail
+                </a>
+                <span>felipequagliagambini@gmail.com</span>
+            </p>
+            <p>
+                <a href="https://www.instagram.com/felipegambini" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-instagram" aria-hidden="true"></i> Instagram
+                </a>
+                <span>@felipegambini</span>
+            </p>
+            <p>
+                <a href="https://www.linkedin.com/in/felipegambini/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn
+                </a>
+                <span>@felipegambini</span>
+            </p>
+            <p>
+                <a href="https://github.com/felipegambini" target="_blank" rel="external">
+                    <i class="fa fa-github" aria-hidden="true"></i> GitHub
+                </a>
+                <span>@felipegambini</span>
+            </p>
+        </div>
         </div>
 
     </main>
