Melhoria Seção Sobre

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="container">
             <h2 id="sobre">Sobre</h2>
             <section>
-                <p>Atualmente sou Analista de Dados Senior em uma financeira.</p>
-                <p>Tenho 4 anos de experiência com Power BI, DAX avançado e Excel avançado;</p>
-                <p>Um pouco mais de 3 anos de experiência em python;</p>
-                <p>Em torno de 1 ano e meio de experiência em SQL.</p>
-                <p>Por ter pouco acesso aos bancos de dados na empresa, no inicio realizava o ETL no próprio power query, ao longo do tempo migrei tudo para python para melhorar a performance do ETL e dos painéis. Agora com mais abertura aos bancos, também utilizo muito para consulta e para construção de aplicações com dados quase em tempo real.</p>
-                <p>Comecei a estudar Git junto com Python e hoje utilizo muito no meu dia a dia para versionamento e colaboração de código, aprendi Git tanto em CLI quanto por interface do GitHub Desktop, sou fascinado pela documentações tanto do Git quanto Python e de outras ferramentas.</p>
-                <p>Comecei aprendendo Python para automação de processos, e após para tratamento de dados.</p>
-                <p>Hoje, grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Mas já tive muita experiência com vários recursos que o python oferece (Flask, WebScraping, automação de tarefas, requests, TKinter e PySimpleGUI, REST APIs, ML).</p>
+                <p>Atualmente sou Analista de Dados Sênior em uma financeira.</p>
+                <p>Tenho 4 anos de experiência com Power BI, DAX avançado, Python, SQL e Microsoft 365;</p>
+                <p>Sou ponto focal de projetos da diretoria, com visão de negócio, participo de discussões internas com diretores e stakeholders na busca pelas melhores tomadas de decisões estratégicas;</p>
+                <p>Utilizo Python e SQL no meu dia a dia para rápida e assertiva extração de informações e indicadores, ETL e construção de aplicações com dados quase em tempo real;</p>
+                <p>Procuro sempre a excelência no que faço. Meu foco hoje são ferramentas poderosas como Power BI, Python, Pandas e SQL, que utilizo para extrair insights valiosos e impulsionar a tomada de decisões estratégicas. Sempre busco maneiras de otimizar fluxos de trabalho e aumentar a eficiência;</p>
+                <p>Grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Também já tive muita experiência com vários pacotes que o python engloba (Flask, WebScraping, Matplotlib, Plotly, automação de tarefas, requests, GUIs, REST APIs, ML);</p>
+                <p>Acredito que a aprendizagem contínua é a chave para o sucesso. Por isso, mantenho-me atualizado sobre as últimas tendências e inovações no campo da análise de dados, participando ativamente de comunidades online, lendo artigos e participando de eventos;</p>
+                <p>Além das habilidades técnicas, valorizo a capacidade de trabalhar em equipe e comunicar insights de maneira clara e convincente. Meu objetivo é colaborar com profissionais de diversas áreas, transformando dados em informações valiosas que impulsionem o crescimento e a tomada de decisões assertivas.</p>
             </section>
         </div>
 
@@ -218,28 +218,11 @@
                     <li>
                       <div class="jobPosition">
                         <span class="bolded">
-                          Analista de Dados Junior II
+                          Analista de Dados Junior
                         </span>
                         <div>
                             <small>
-                              Jan 2022 - Dez 2022 (1 ano)
-                            </small>
-                        </div>
-                      </div>
-                      <div class="projectName">
-                        <span>
-                          Crefaz
-                        </span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="jobPosition">
-                        <span class="bolded">
-                          Analista de Dados Junior I
-                        </span>
-                        <div>
-                            <small>
-                              Fev 2021 - Dez 2021 (11 meses)
+                              Fev 2021 - Dez 2022 (1 ano e 11 meses)
                             </small>
                         </div>
                       </div>
