--- a/index.html
+++ b/index.html
@@ -50,19 +50,16 @@
                 <li><a href="#certificados"><i class="fa fa-certificate" aria-hidden="true"></i> Certificados</a></li>
                 <li><a href="#contato"><i class="fa fa-phone" aria-hidden="true"></i> Contato</a></li>
             </ul>
+            <div id="pdf-download"><a href="assets/curriculo.pdf" download="Currículo Felipe Quaglia Gambini">Baixar em PDF <i class="fa fa-download" aria-hidden="true"></i></a></div>
         </nav>
     </header>
     <main>
         <div class="container">
             <h2 id="sobre">Sobre</h2>
             <section>
-                <p>Atualmente sou Analista de Dados Sênior em uma financeira.</p>
-                <p>Tenho 4 anos de experiência com Power BI, DAX avançado, Python, SQL e Microsoft 365;</p>
-                <p>Sou ponto focal de projetos da diretoria, com visão de negócio, participo de discussões internas com diretores e stakeholders na busca pelas melhores tomadas de decisões estratégicas;</p>
-                <p>Utilizo Python e SQL no meu dia a dia para rápida e assertiva extração de informações e indicadores, ETL e construção de aplicações com dados quase em tempo real;</p>
-                <p>Procuro sempre a excelência no que faço. Meu foco hoje são ferramentas poderosas como Power BI, Python, Pandas e SQL, que utilizo para extrair insights valiosos e impulsionar a tomada de decisões estratégicas. Sempre busco maneiras de otimizar fluxos de trabalho e aumentar a eficiência;</p>
-                <p>Grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Também já tive muita experiência com vários pacotes que o python engloba (Flask, WebScraping, Matplotlib, Plotly, automação de tarefas, requests, GUIs, REST APIs, ML);</p>
-                <p>Acredito que a aprendizagem contínua é a chave para o sucesso. Por isso, mantenho-me atualizado sobre as últimas tendências e inovações no campo da análise de dados, participando ativamente de comunidades online, lendo artigos e participando de eventos;</p>
+                <p>Atualmente sou Analista de Dados Sênior em uma financeira com 4 anos de experiência com Power BI, DAX avançado, Python, SQL e Microsoft 365. Sou ponto focal de projetos da diretoria, com visão de negócio, participo de discussões internas com diretores e stakeholders na busca pelas melhores tomadas de decisões estratégicas;</p>
+                <p>Utilizo Python e SQL no meu dia a dia para rápida e assertiva extração de informações e indicadores, ETL e construção de aplicações com dados quase em tempo real. Procuro sempre a excelência no que faço. Meu foco hoje são ferramentas poderosas como Power BI, Python, Pandas e SQL, que utilizo para extrair insights valiosos e impulsionar a tomada de decisões estratégicas. Sempre busco maneiras de otimizar fluxos de trabalho e aumentar a eficiência;</p>
+                <p>Grande parte do meu conhecimento é voltado para análise e tratamento de dados com pandas e duckdb. Também já tive muita experiência com vários pacotes que o python engloba (Flask, WebScraping, Matplotlib, Plotly, automação de tarefas, requests, GUIs, REST APIs, ML). Acredito que a aprendizagem contínua é a chave para o sucesso. Por isso, mantenho-me atualizado sobre as últimas tendências e inovações no campo da análise de dados, participando ativamente de comunidades online, lendo artigos e participando de eventos;</p>
                 <p>Além das habilidades técnicas, valorizo a capacidade de trabalhar em equipe e comunicar insights de maneira clara e convincente. Meu objetivo é colaborar com profissionais de diversas áreas, transformando dados em informações valiosas que impulsionem o crescimento e a tomada de decisões assertivas.</p>
             </section>
         </div>
@@ -197,6 +194,13 @@
                           Crefaz
                         </span>
                       </div>
+                      <div class="jobDescription">
+                        <details>
+                          <summary>Detalhes</summary>
+                          <p>No momento atuo como ponto focal em projetos de alto nível diretamente para a diretoria, contribuindo com análises de risco e financeiro. Me especializei em Python, pandas e SQL, realizando análises complexas para os setores jurídico, controladoria, financeiro e compliance. Proativo na identificação de gargalos e melhorias, desenvolvo dashboards e automações que impulsionam a eficiência e a tomada de decisões estratégicas. Sempre procuro ter a visão de negócio e impacto das decisões como um todo. Também tenho contato com o funcho de investimentos, ajudando na auditoria de cálculos de cessão, PDD e carteira.</p>
+                          <p><strong>Skills: </strong>Análise de Carteira de Crédito, Gestão de Risco, PDD, Indicadores Financeiros, Power BI, DAX, Python, SQL.</p>
+                        </details>
+                    </div>
                     </li>
                     <li>
                       <div class="jobPosition">
@@ -214,6 +218,13 @@
                           Crefaz
                         </span>
                       </div>
+                      <div class="jobDescription">
+                        <details>
+                          <summary>Detalhes</summary>
+                          <p>Desenvolvi a metodologia de perda a partir da análise minuciosa dos indicadores de carteira e a projeção de carteira e rentabilidade líquida mensal do fundo de investimentos. Aprimorei processos e análises no time de inteligência de negócios. Tornei-me referência em Power BI e DAX, sendo consultado por colegas em busca de orientação. Construí o fluxo de caixa financeiro da empresa, destacando-me em apresentações e na entrega de resultados diretamente à diretoria.</p>
+                          <p><strong>Skills: </strong>Fluxo de Caixa, Tomada de Decisão, Previsão de Lucros e Perdas, Power BI, DAX, Python, SQL, Excel, Liderança.</p>
+                        </details>
+                    </div>
                     </li>
                     <li>
                       <div class="jobPosition">
@@ -231,6 +242,13 @@
                           Crefaz
                         </span>
                       </div>
+                      <div class="jobDescription">
+                        <details>
+                          <summary>Detalhes</summary>
+                          <p>Centralizei a assistência para uma equipe de mais de 100 supervisores, liderando o projeto de gestão de rotas. Construí análises e painéis utilizando Power BI e DAX, me destacando pela proatividade e pelo desenvolvimento de habilidades em Python. Realizei apresentações para a diretoria, contribuindo com insights estratégicos sobre indicadores financeiros e de desempenho. Comecei a aprender sobre os indicadores financeiro como perda, FPD, Recuperação de 1ª parcela, Over, PDD e outros indicadores de carteira.</p>
+                          <p><strong>Skills: </strong>Power BI, DAX, Python, Excel, ETL, Liderança, Melhoria de Processos.</p>
+                        </details>
+                    </div>
                     </li>
                     <li>
                       <div class="jobPosition">
@@ -249,6 +267,11 @@
                         </span>
                       </div>
                       <div class="jobDescription">
+                        <details>
+                          <summary>Detalhes</summary>
+                          <p>Responsável pela construção de dashboards e automações para a equipe de vendas, utilizando Power BI, Excel e VBA. Me destaquei na automação de planilhas para campanhas de bonificação, proporcionando insights e KPIs valiosos. Desenvolvi conhecimentos sobre produtos financeiros e aprimorei habilidades técnicas em visualização de dados.</p>
+                          <p><strong>Skills: </strong>Power BI, DAX, Excel, VBA, Comunicação.</p>
+                        </details>
                     </div>
                     </li>
                     <li>
@@ -270,12 +293,7 @@
                       <div class="jobDescription">
                           <details>
                             <summary>Detalhes</summary>
-                            <p>Durante a graduação em Administração, realizei um estágio na Receita Estadual, onde tive meu primeiro contato com o ambiente corporativo. Nessa experiência, desenvolvi habilidades essenciais, como:</p>
-                            <ul>
-                              <li><strong>Comunicação e Atendimento ao Público:</strong> atendi diretamente o público, auxiliando nos cadastros e explicando detalhadamente sobre o programa Nota Paraná. Essa interação constante aprimorou minhas capacidades de comunicação e resolução de problemas.</li>
-                              <li><strong>Gerenciamento de Dados:</strong> fui responsável pelo controle e manutenção da base de dados das entidades participantes do programa, o que me despertou o interesse pela área de dados e análise de informações.</li>
-                              <li><strong>Automação de Processos:</strong> percebi oportunidades de melhoria nos processos, onde comecei a aprender VBA. Desenvolvi códigos para automatizar a geração de ofícios em resposta às solicitações dos juízes. Esse projeto proporcionou meu primeiro contato com programação, abrindo caminho para grandes oportunidades de aprendizado nessa área.</li>
-                            </ul>
+                            <p>Durante a graduação em Administração, realizei um estágio na Receita Estadual, onde tive meu primeiro contato com o ambiente corporativo. Nessa experiência, desenvolvi habilidades essenciais, como: Comunicação e Atendimento ao Público; Gerenciamento de Dados; Automação de Processos</p>
                             <p><strong>Atividades:</strong> Receber, encaminhar, ordenar, protocolar e fotocopiar documentos administrativos-fiscais,digitar e emitir documentos via sistema, atender público interno e externo, atender telefone e auxiliar na manutenção do Portal Nota Paraná.</p>
                             <p><strong>Skills: </strong>Excel, VBA, Word, Comunicação.</p>
                           </details>
