resume download english version

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li><a href="#contato"><i class="fa fa-phone" aria-hidden="true"></i> Contato</a></li>
             </ul>
             <div id="pdf-download"><a href="assets/curriculo.pdf" download="Currículo Felipe Quaglia Gambini">Baixar em PDF <i class="fa fa-download" aria-hidden="true"></i></a></div>
+            <div id="resume-download"><a href="assets/resume.pdf" download="Resume Felipe Quaglia Gambini">English version <i class="fa fa-download" aria-hidden="true"></i></a></div>
         </nav>
     </header>
     <main>
@@ -197,7 +198,7 @@
                       <div class="jobDescription">
                         <details>
                           <summary>Detalhes</summary>
-                          <p>No momento atuo como ponto focal em projetos de alto nível diretamente para a diretoria, contribuindo com análises de risco e financeiro. Me especializei em Python, pandas e SQL, realizando análises complexas para os setores jurídico, controladoria, financeiro e compliance. Proativo na identificação de gargalos e melhorias, desenvolvo dashboards e automações que impulsionam a eficiência e a tomada de decisões estratégicas. Sempre procuro ter a visão de negócio e impacto das decisões como um todo. Também tenho contato com o funcho de investimentos, ajudando na auditoria de cálculos de cessão, PDD e carteira.</p>
+                          <p>Ponto focal em projetos de alto nível diretamente para a diretoria, contribuindo com análises de risco e financeiro. Especializado em Python, pandas e SQL, realizando análises complexas para os setores jurídico, controladoria, financeiro e compliance. Proativo na identificação de gargalos e melhorias, desenvolvimento de dashboards e automações que impulsionam a eficiência e a tomada de decisões estratégicas. Visão de negócio e impacto das decisões como um todo. Contato com o fundo de investimentos, ajudando na auditoria de cálculos de cessão, PDD e carteira.</p>
                           <p><strong>Skills: </strong>Análise de Carteira de Crédito, Gestão de Risco, PDD, Indicadores Financeiros, Power BI, DAX, Python, SQL.</p>
                         </details>
                     </div>
@@ -221,7 +222,7 @@
                       <div class="jobDescription">
                         <details>
                           <summary>Detalhes</summary>
-                          <p>Desenvolvi a metodologia de perda a partir da análise minuciosa dos indicadores de carteira e a projeção de carteira e rentabilidade líquida mensal do fundo de investimentos. Aprimorei processos e análises no time de inteligência de negócios. Tornei-me referência em Power BI e DAX, sendo consultado por colegas em busca de orientação. Construí o fluxo de caixa financeiro da empresa, destacando-me em apresentações e na entrega de resultados diretamente à diretoria.</p>
+                          <p>Desenvolvimento da metodologia de perda a partir da análise minuciosa dos indicadores de carteira, projeção de carteira e rentabilidade líquida mensal do fundo de investimentos. Aprimoramento dos processos e análises no time de inteligência de negócios. Referência em Power BI e DAX, sendo consultado por colegas em busca de orientação. Construção da visualização do fluxo de caixa financeiro da empresa, destacando-se em apresentações e na entrega de resultados diretamente à diretoria.</p>
                           <p><strong>Skills: </strong>Fluxo de Caixa, Tomada de Decisão, Previsão de Lucros e Perdas, Power BI, DAX, Python, SQL, Excel, Liderança.</p>
                         </details>
                     </div>
@@ -245,7 +246,7 @@
                       <div class="jobDescription">
                         <details>
                           <summary>Detalhes</summary>
-                          <p>Centralizei a assistência para uma equipe de mais de 100 supervisores, liderando o projeto de gestão de rotas. Construí análises e painéis utilizando Power BI e DAX, me destacando pela proatividade e pelo desenvolvimento de habilidades em Python. Realizei apresentações para a diretoria, contribuindo com insights estratégicos sobre indicadores financeiros e de desempenho. Comecei a aprender sobre os indicadores financeiro como perda, FPD, Recuperação de 1ª parcela, Over, PDD e outros indicadores de carteira.</p>
+                          <p>Assistência para uma equipe de mais de 100 supervisores, liderando o projeto de gestão de rotas. Construção de análises e painéis utilizando Power BI e DAX, destacando-se pela proatividade e pelo desenvolvimento de habilidades em Python. Apresentações para a diretoria, contribuindo com insights estratégicos sobre indicadores financeiros e de desempenho. Início do aprendizado sobre os indicadores financeiros como perda, FPD, Recuperação de 1ª parcela, Over, PDD e outros indicadores de carteira.</p>
                           <p><strong>Skills: </strong>Power BI, DAX, Python, Excel, ETL, Liderança, Melhoria de Processos.</p>
                         </details>
                     </div>
@@ -269,7 +270,7 @@
                       <div class="jobDescription">
                         <details>
                           <summary>Detalhes</summary>
-                          <p>Responsável pela construção de dashboards e automações para a equipe de vendas, utilizando Power BI, Excel e VBA. Me destaquei na automação de planilhas para campanhas de bonificação, proporcionando insights e KPIs valiosos. Desenvolvi conhecimentos sobre produtos financeiros e aprimorei habilidades técnicas em visualização de dados.</p>
+                          <p>Responsável pela construção de dashboards e automações para a equipe de vendas, utilizando Power BI, Excel e VBA. Destaque na automação de planilhas para campanhas de bonificação, proporcionando insights e KPIs valiosos. Conhecimento sobre produtos financeiros e aprimoramento de habilidades técnicas em visualização de dados.</p>
                           <p><strong>Skills: </strong>Power BI, DAX, Excel, VBA, Comunicação.</p>
                         </details>
                     </div>
@@ -293,7 +294,7 @@
                       <div class="jobDescription">
                           <details>
                             <summary>Detalhes</summary>
-                            <p>Durante a graduação em Administração, realizei um estágio na Receita Estadual, onde tive meu primeiro contato com o ambiente corporativo. Nessa experiência, desenvolvi habilidades essenciais, como: Comunicação e Atendimento ao Público; Gerenciamento de Dados; Automação de Processos</p>
+                            <p>Estágio na Receita Estadual do Paraná durante a graduação em Administração, primeiro contato com o ambiente corporativo. Desenvolvimento de habilidades essenciais, como comunicação e atendimento ao público; gerenciamento de dados e automação de processos.</p>
                             <p><strong>Atividades:</strong> Receber, encaminhar, ordenar, protocolar e fotocopiar documentos administrativos-fiscais,digitar e emitir documentos via sistema, atender público interno e externo, atender telefone e auxiliar na manutenção do Portal Nota Paraná.</p>
                             <p><strong>Skills: </strong>Excel, VBA, Word, Comunicação.</p>
                           </details>
