Certificado FIDC - ANBIMA

--- a/index.html
+++ b/index.html
@@ -344,6 +344,14 @@
             <h2 id="certificados">Licenças e Certificados</h2>
                 <div class="card-group">
                     <div class="card">
+                        <img src="imagens/Certificados/FIDC.png" alt="Card image cap">
+                        <div class="card-content">
+                            <h4>FIDC - Fundos de Investimento em Direitos Creditórios</h4>
+                            <a class="credential" href="https://cursos.anbima.com.br/certificado/consulta?key=7OSG-3UIY-QY1H-O0I8" target="_blank">Exibir credencial <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                            <p>ANBIMA</p>
+                        </div>
+                    </div>
+                    <div class="card">
                         <img src="imagens/Certificados/Pandas.jpg" alt="Card image cap">
                         <div class="card-content">
                             <h4>Data Analysis with Pandas</h4>
