--- a/index.html
+++ b/index.html
@@ -331,6 +331,14 @@
             <h2 id="portifolio">Portifólio</h2>
             <div class="card-group">
               <div class="card">
+                  <img src="imagens/Portifólio/placar_mensal.png" alt="Card image cap">
+                  <div class="card-content">
+                      <h4>Créditos distribuídos pelo Nota Paraná</h4>
+                      <a class="credential" href="https://www.notaparana.pr.gov.br/Pagina/Placar-dos-creditos" target="_blank">Acessar Projeto <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                      <p>Power BI</p>
+                  </div>
+              </div>
+              <div class="card">
                   <img src="imagens/Portifólio/desafio_xperiun.png" alt="Card image cap">
                   <div class="card-content">
                       <h4>Gráfico Dispersão com Cores e Eixos Dinâmicos</h4>
