--- a/index.html
+++ b/index.html
@@ -339,6 +339,14 @@
                   </div>
               </div>
               <div class="card">
+                  <img src="imagens/Portifólio/creditos_entidades.png" alt="Card image cap">
+                  <div class="card-content">
+                      <h4>Créditos distribuídos para as entidades - Nota Paraná</h4>
+                      <a class="credential" href="https://www.notaparana.pr.gov.br/Pagina/Creditos-distribuidos-para-entidades" target="_blank">Acessar Projeto <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                      <p>Power BI</p>
+                  </div>
+              </div>
+              <div class="card">
                   <img src="imagens/Portifólio/desafio_xperiun.png" alt="Card image cap">
                   <div class="card-content">
                       <h4>Gráfico Dispersão com Cores e Eixos Dinâmicos</h4>
